fix bug paginate is changed when filter or sort + visible/invisible login button + search by title and also author

--- a/public/style.css
+++ b/public/style.css
@@ -358,3 +358,9 @@ select {
     padding-right: 5px  ;
 }
 
+.account-btn {
+    width: 200px;
+    border: 1px solid #007bff;
+    border-radius: 5px;
+    visibility: collapse;
+}
